--- a/tests/meta/john.yml
+++ b/tests/meta/john.yml
@@ -4,4 +4,5 @@ username: john
 comment: 'Restricted User'
 group: sftponly
 shell: '/sbin/nologin'
-ssh_key_files: "{{ john_ssh_key_files | default([]) }}"
+ssh_key_files:
+  - keys/john.pub
